<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:background="@color/black_2"
    tools:context=".ui.moviedetail.MovieDetailsActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="30dp"
        android:orientation="vertical"
        android:paddingTop="30dp"
        android:paddingBottom="30dp">

        <ImageView
            android:id="@+id/img_backdrop"
            android:layout_width="match_parent"
            android:layout_height="200dp"
            android:layout_marginBottom="40dp"
            android:adjustViewBounds="true"
            android:contentDescription="@string/image_backdrop"
            tools:src="@android:color/darker_gray" />

        <TextView
            android:id="@+id/tv_title"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="20dp"
            android:layout_marginEnd="30dp"
            android:layout_marginBottom="30dp"
            android:textColor="@color/green_title"
            android:textSize="20sp"
            android:textStyle="bold"
            tools:text="Title" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="20dp"
            android:layout_marginRight="20dp"
            android:orientation="horizontal">

            <ImageView
                android:id="@+id/img_poster"
                android:layout_width="130dp"
                android:layout_height="150dp"
                android:contentDescription="@string/poster"
                tools:src="@android:color/darker_gray" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:layout_marginStart="10dp"
                android:orientation="vertical">

                <ImageButton
                    android:id="@+id/btn_favorite"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginEnd="32dp"
                    android:background="?android:selectableItemBackground"
                    app:srcCompat="@drawable/ic_favorite_border"
                    android:contentDescription="@string/favorite_button" />

                <TextView
                    android:id="@+id/tv_release_date"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textColor="@color/yellow_sub_title"
                    android:textSize="16sp"
                    android:textStyle="bold"
                    tools:text="Release date" />

                <TextView
                    android:id="@+id/tv_popularity"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textColor="@color/yellow_sub_title"
                    android:textSize="16sp"
                    android:textStyle="bold"
                    tools:text="Popularity: " />

                <TextView
                    android:id="@+id/tv_vote_avg"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textColor="@color/yellow_sub_title"
                    android:textSize="16sp"
                    android:textStyle="bold"
                    tools:text="Vote average: " />

                <TextView
                    android:id="@+id/tv_vote_count"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textColor="@color/yellow_sub_title"
                    android:textSize="16sp"
                    android:textStyle="bold"
                    tools:text="Vote Count: " />
            </LinearLayout>

        </LinearLayout>

        <TextView
            android:id="@+id/tv_overview"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="20dp"
            android:layout_marginTop="50dp"
            android:layout_marginEnd="20dp"
            android:textColor="@android:color/white"
            android:textSize="18sp"
            tools:text="Overview" />
    </LinearLayout>
</ScrollView>