package bangkit.adhytia.moviecatalogue.ui.home

import androidx.recyclerview.widget.RecyclerView
import androidx.test.espresso.Espresso.onView
import androidx.test.espresso.Espresso.pressBack
import androidx.test.espresso.action.ViewActions.click
import androidx.test.espresso.action.ViewActions.swipeUp
import androidx.test.espresso.assertion.ViewAssertions.matches
import androidx.test.espresso.contrib.RecyclerViewActions
import androidx.test.espresso.matcher.ViewMatchers.*
import androidx.test.ext.junit.rules.ActivityScenarioRule
import bangkit.adhytia.moviecatalogue.R
import bangkit.adhytia.moviecatalogue.data.MovieEntity
import bangkit.adhytia.moviecatalogue.data.TvShowEntity
import bangkit.adhytia.moviecatalogue.utils.Constants
import org.junit.Before
import org.junit.Rule
import org.junit.Test

class HomeActivityTest {
    private lateinit var movieEntity: MovieEntity
    private lateinit var tvShowEntity: TvShowEntity

    @get:Rule
    var activityRule = ActivityScenarioRule(HomeActivity::class.java)

    @Before
    fun setUp() {
        movieEntity = MovieEntity(
            399566,
            "Godzilla vs. Kong",
            "In a time when monsters walk the Earth, humanity’s fight for its future sets Godzilla and Kong on a collision course that will see the two most powerful forces of nature on the planet collide in a spectacular battle for the ages.",
            "${Constants.BASE_IMAGE_URL}/pgqgaUx1cJb5oZQQ5v0tNARCeBp.jpg",
            "${Constants.BASE_IMAGE_URL}/inJjDhCjfhh3RtrJWBmmDqeuSYC.jpg",
            "2021-03-24",
            "8.3",
            "4676",
            "6159.271"
        )

        tvShowEntity = TvShowEntity(
            88396,
            "The Falcon and the Winter Soldier",
            "Following the events of “Avengers: Endgame”, the Falcon, Sam Wilson and the Winter Soldier, Bucky Barnes team up in a global adventure that tests their abilities, and their patience.",
            "${Constants.BASE_IMAGE_URL}/6kbAMLteGO8yyewYau6bJ683sw7.jpg",
            "${Constants.BASE_IMAGE_URL}/b0WmHGc8LHTdGCVzxRb3IBMur57.jpg",
            "2021-03-19",
            "7.9",
            "4281",
            "4207.4"
        )
    }

    @Test
    fun loadMovies() {
        onView(withId(R.id.rv_movies)).check(matches(isDisplayed()))
        onView(withId(R.id.rv_movies)).perform(
            RecyclerViewActions.scrollToPosition<RecyclerView.ViewHolder>(
                20
            )
        )
    }

    @Test
    fun loadDetailMovie() {
        onView(withId(R.id.rv_movies)).perform(
            RecyclerViewActions.actionOnItemAtPosition<RecyclerView.ViewHolder>(
                0,
                click()
            )
        )
        onView(withId(R.id.tv_title)).check(matches(isDisplayed()))
        onView(withId(R.id.tv_title)).check(matches(withText(movieEntity.title)))
        onView(withId(R.id.tv_title)).perform(swipeUp())
        onView(withId(R.id.tv_release_date)).check(matches(isDisplayed()))
        onView(withId(R.id.tv_release_date)).check(matches(withText("Release date: " + movieEntity.releaseDate)))
        onView(withId(R.id.tv_popularity)).check(matches(isDisplayed()))
        onView(withId(R.id.tv_popularity)).check(matches(withText("Popularity: " + movieEntity.popularity)))
        onView(withId(R.id.tv_vote_avg)).check(matches(isDisplayed()))
        onView(withId(R.id.tv_vote_avg)).check(matches(withText("Vote average: " + movieEntity.voteAverage)))
        onView(withId(R.id.tv_vote_count)).check(matches(isDisplayed()))
        onView(withId(R.id.tv_vote_count)).check(matches(withText("Vote Count: " + movieEntity.voteCount)))
        onView(withId(R.id.tv_overview)).check(matches(isDisplayed()))
        onView(withId(R.id.tv_overview)).check(matches(withText(movieEntity.overview)))
        onView(withId(R.id.img_backdrop)).check(matches(isDisplayed()))
        onView(withId(R.id.img_poster)).check(matches(isDisplayed()))
        onView(withId(R.id.btn_favorite)).check(matches(isDisplayed()))
        pressBack()
    }

    @Test
    fun loadTvShows() {
        onView(withText("tvshow")).perform(click())
        onView(withId(R.id.rv_tvshows)).check(matches(isDisplayed()))
        onView(withId(R.id.rv_tvshows)).perform(
            RecyclerViewActions.scrollToPosition<RecyclerView.ViewHolder>(
                20
            )
        )
    }

    @Test
    fun loadDetailTvShow() {
        onView(withText("tvshow")).perform(click())
        onView(withId(R.id.rv_tvshows)).perform(
            RecyclerViewActions.actionOnItemAtPosition<RecyclerView.ViewHolder>(
                0,
                click()
            )
        )
        onView(withId(R.id.tv_title)).check(matches(isDisplayed()))
        onView(withId(R.id.tv_title)).check(matches(withText(tvShowEntity.title)))
        onView(withId(R.id.tv_title)).perform(swipeUp())
        onView(withId(R.id.tv_first_air_date)).check(matches(isDisplayed()))
        onView(withId(R.id.tv_first_air_date)).check(matches(withText("First air date: " + tvShowEntity.firstAirDate)))
        onView(withId(R.id.tv_popularity)).check(matches(isDisplayed()))
        onView(withId(R.id.tv_popularity)).check(matches(withText("Popularity: " + tvShowEntity.popularity)))
        onView(withId(R.id.tv_vote_avg)).check(matches(isDisplayed()))
        onView(withId(R.id.tv_vote_avg)).check(matches(withText("Vote average: " + tvShowEntity.voteAverage)))
        onView(withId(R.id.tv_vote_count)).check(matches(isDisplayed()))
        onView(withId(R.id.tv_vote_count)).check(matches(withText("Vote Count: " + tvShowEntity.voteCount)))
        onView(withId(R.id.tv_overview)).check(matches(isDisplayed()))
        onView(withId(R.id.tv_overview)).check(matches(withText(tvShowEntity.overview)))
        onView(withId(R.id.img_backdrop)).check(matches(isDisplayed()))
        onView(withId(R.id.img_poster)).check(matches(isDisplayed()))
        onView(withId(R.id.btn_favorite)).check(matches(isDisplayed()))
        pressBack()
    }

    @Test
    fun insertAndDeleteFavoriteMovie() {
        onView(withId(R.id.rv_movies)).perform(
            RecyclerViewActions.actionOnItemAtPosition<RecyclerView.ViewHolder>(
                0,
                click()
            )
        )
        onView(withId(R.id.btn_favorite)).perform(click())
        pressBack()

        onView(withId(R.id.menu_favorite)).perform(click())
        onView(withId(R.id.btn_movie)).check(matches(isDisplayed()))
        onView(withId(R.id.btn_tvShow)).check(matches(isDisplayed()))

        onView(withId(R.id.btn_movie)).perform(click())
        onView(withId(R.id.rv_favorite)).check(matches(isDisplayed()))

        onView(withId(R.id.rv_favorite)).perform(
            RecyclerViewActions.actionOnItemAtPosition<RecyclerView.ViewHolder>(
                0,
                click()
            )
        )
        onView(withId(R.id.btn_favorite)).perform(click())
        pressBack()
    }

    @Test
    fun insertAndDeleteFavoriteTvShow() {
        onView(withText("tvshow")).perform(click())
        onView(withId(R.id.rv_tvshows)).perform(
            RecyclerViewActions.actionOnItemAtPosition<RecyclerView.ViewHolder>(
                0,
                click()
            )
        )
        onView(withId(R.id.btn_favorite)).perform(click())
        pressBack()

        onView(withId(R.id.menu_favorite)).perform(click())
        onView(withId(R.id.btn_tvShow)).check(matches(isDisplayed()))
        onView(withId(R.id.btn_tvShow)).check(matches(isDisplayed()))

        onView(withId(R.id.btn_tvShow)).perform(click())
        onView(withId(R.id.rv_favorite)).check(matches(isDisplayed()))

        onView(withId(R.id.rv_favorite)).perform(
            RecyclerViewActions.actionOnItemAtPosition<RecyclerView.ViewHolder>(
                0,
                click()
            )
        )
        onView(withId(R.id.btn_favorite)).perform(click())
        pressBack()
    }

    @Test
    fun insertDeleteFavoriteMovieAndTvShow() {
        onView(withId(R.id.rv_movies)).perform(
            RecyclerViewActions.actionOnItemAtPosition<RecyclerView.ViewHolder>(
                0,
                click()
            )
        )
        onView(withId(R.id.btn_favorite)).perform(click())
        pressBack()

        onView(withText("tvshow")).perform(click())
        onView(withId(R.id.rv_tvshows)).perform(
            RecyclerViewActions.actionOnItemAtPosition<RecyclerView.ViewHolder>(
                0,
                click()
            )
        )
        onView(withId(R.id.btn_favorite)).perform(click())
        pressBack()

        onView(withId(R.id.menu_favorite)).perform(click())
        onView(withId(R.id.btn_movie)).check(matches(isDisplayed()))
        onView(withId(R.id.btn_tvShow)).check(matches(isDisplayed()))

        onView(withId(R.id.btn_movie)).perform(click())
        onView(withId(R.id.rv_favorite)).check(matches(isDisplayed()))

        onView(withId(R.id.btn_tvShow)).perform(click())
        onView(withId(R.id.rv_favorite)).check(matches(isDisplayed()))

        onView(withId(R.id.rv_favorite)).perform(
            RecyclerViewActions.actionOnItemAtPosition<RecyclerView.ViewHolder>(
                0,
                click()
            )
        )
        onView(withId(R.id.btn_favorite)).perform(click())
        pressBack()

        onView(withId(R.id.btn_movie)).perform(click())

        onView(withId(R.id.rv_favorite)).perform(
            RecyclerViewActions.actionOnItemAtPosition<RecyclerView.ViewHolder>(
                0,
                click()
            )
        )
        onView(withId(R.id.btn_favorite)).perform(click())
        pressBack()
    }
}